Fix dark mode style

--- a/assets/sass/darkmode.scss
+++ b/assets/sass/darkmode.scss
@@ -13,7 +13,7 @@ body.dark-mode * {
 }
 
 .dark-mode div.admonition,
-p.admonition {
+.dark-mode p.admonition {
   color: #f5f5f5;
   background: rgb(45, 45, 45);
 }
@@ -25,6 +25,7 @@ p.admonition {
 
 .dark-mode a.button {
   color: #000;
+  background: green;
 }
 
 .dark-mode div.js-toggle-track {
